--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,7 @@
   position: relative;
   display: flex;
   overflow: hidden;
+  background-color: #f2f2f2;
   /*align-items: center;*/
   /* выше установили ограничения для секции */
 }
