--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -10,4 +10,9 @@
   color: #2F80ED;
   text-align: right;
   text-decoration: none;
+  transition-duration: 1s;
+}
+
+.feynman__link:hover {
+  opacity: .5;
 }
