--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,3 +1,9 @@
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+  transition-duration: 1s;
+}
+
 .header__link:hover {
-  color: #0f0;
+  opacity: .5;
 }
