--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -6,8 +6,9 @@
   text-decoration: none;
   padding: 0;
   margin: 0;
+  transition-duration: 1s;
 }
 
 .khan__buy-link:hover {
-  color: #0f0;
+  opacity: .5;
 }
