--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,8 +1,10 @@
 .resources__link {
   width: 270px;
   height: 38px;
+  transition-duration: 1s;
 }
 
 .resources__link:hover {
-  color: #0f0;
+  /*color: #0f0;*/
+  opacity: .5;
 }
