--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -2,4 +2,8 @@
   padding-top: 100px;
   padding-bottom: 100px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
