--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,6 +1,9 @@
 .header__title {
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 
   margin: auto 64px;
   width: 730px;
