--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -1,3 +1,8 @@
 .resources {
   padding-top: 100px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
