--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,9 +1,12 @@
 .section-title {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   width: 60%;
   text-align: center;
   line-height: 1.2;
   font-size: 60px;
   font-weight: 600;
-  margin-bottom: 20px
+  margin-bottom: 20px;
+  /*display: flex;*/
 }
