--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
   width: 80%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-top: 100px;
 }
