--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -1,7 +1,10 @@
 .digits {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+
   padding-top: 100px;
   padding-bottom: 100px;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
