--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,4 +1,7 @@
 .feynman__title {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   display: flex;
   margin: 0 auto;
   width: 648px;
@@ -8,4 +11,5 @@
   font-weight: 600;
   text-align: center;
   margin-bottom: 70px;
+  color: #000000;
 }
