--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,8 @@
 .feynman {
-  padding-top: 100px;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  padding-top: 100px;
   background-image: url(../../images/feynman.png);
   background-repeat: no-repeat;
   min-height: 890px;
