--- a/blocks/footer/__column-heading/footer__column-heading.css
+++ b/blocks/footer/__column-heading/footer__column-heading.css
@@ -1,7 +1,7 @@
 .footer__column-heading {
-  color: white;
-  box-sizing: border-box;
   padding: 0;
-  margin: 0;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
 }
