--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,5 +1,9 @@
 .footer__columns {
-  display: flex;
+  padding: 0;
+  margin: 0;
   width: 90%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
