--- a/blocks/footer/__social-icon/footer__social-icon.css
+++ b/blocks/footer/__social-icon/footer__social-icon.css
@@ -1,7 +1,9 @@
 .footer__social-icon {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   width: 16px;
   height: 16px;
   text-align: center;
   margin: 0 10px 0 0;
-  padding: 0;
 }
