--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,12 @@
 .footer {
-  background-color: #1D1D1D;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   min-height: 350px;
+  background-color: #1f1f1f;
+  color: #fff;
   display: flex;
+  flex-direction: raw;
   justify-content: center;
   padding-top: 60px;
   padding-bottom: 40px;
