--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -1,7 +1,9 @@
 .header__main-illustration {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   width: 765px;
   height: 608px;
-  box-sizing: border-box;
   position: absolute;
   right: 0;
   bottom: 0;
