--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,4 +1,7 @@
 .header__square-pic {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   position: absolute;
   width: 568px;
   height: 568px;
