--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,5 +1,7 @@
 .header__subtitle {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   width: 388px;
   height: 75px;
   position: absolute;
