--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,5 +1,7 @@
 .oakley {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   padding-top: 160px;
