--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,7 @@
 .resources__logo-zone {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   margin: 0 auto;
