--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -1,6 +1,8 @@
 .resources {
-  padding-top: 100px;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
