--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,6 +1,9 @@
 .video {
-  padding-top: 100px;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
