--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
   color: #2f80ed;
   transition-duration: 1s;
 }
