--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -3,13 +3,13 @@
   margin: 0;
   padding: 0;
   width: 388px;
-  height: 75px;
+  min-height: 75px;
   position: absolute;
   left: 64px;
   bottom: 30px;
 
   font-style: normal;
-  font-weight: 600;
+  font-weight: normal;
   font-size: 18px;
   line-height: 25px;
   z-index: 2;
