--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -2,7 +2,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  background-color: #f2f2f2;
   display: flex;
   justify-content: center;
   padding-top: 160px;
+
 }
