--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -1,6 +1,6 @@
 .two-columns__brief {
   width: 175px;
-  height: 44px;
+  min-height: 44px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
