--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -7,4 +7,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+   /* опустить элемент на 50 px ниже*/
+   transform: translate(0, 50px);
 }
